trunk/Archive2/3a/1c6f548ba63df9/output
main.cpp:25:19: error: 'It' was not declared in this scope
 int writetostruct(It begin, It end);
                   ^
main.cpp:25:29: error: 'It' was not declared in this scope
 int writetostruct(It begin, It end);
                             ^
main.cpp:25:35: error: expression list treated as compound expression in initializer [-fpermissive]
 int writetostruct(It begin, It end);
                                   ^
main.cpp:26:10: error: 'int safe' redeclared as different kind of symbol
 int safe(It begin, It end){
          ^
main.cpp:24:5: error: previous declaration of 'template<class It> int safe(It, It)'
 int safe(It begin, It end);
     ^
main.cpp:26:10: error: 'It' was not declared in this scope
 int safe(It begin, It end){
          ^
main.cpp:26:20: error: 'It' was not declared in this scope
 int safe(It begin, It end){
                    ^
